<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.googlesource.gerrit.plugins</groupId>
    <artifactId>chatgpt-code-review-gerrit-plugin</artifactId>
    <packaging>jar</packaging>
    <version>1.0.1</version>
    <properties>
        <Gerrit-ApiType>plugin</Gerrit-ApiType>
        <Gerrit-ApiVersion>3.3.0</Gerrit-ApiVersion>
        <maven.test.skip>false</maven.test.skip>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <Gerrit-PluginName>chatgpt-code-review-gerrit-plugin</Gerrit-PluginName>
                            <Gerrit-Module>com.googlesource.gerrit.plugins.chatgpt.Module</Gerrit-Module>

                            <Implementation-Vendor>Xie Long</Implementation-Vendor>
                            <Implementation-URL>
                                https://github.com/xielong/chatgpt-code-review-gerrit-plugin
                            </Implementation-URL>

                            <Implementation-Title>ChatGPT Code Review Gerrit Plugin</Implementation-Title>
                            <Implementation-Version>${project.version}</Implementation-Version>

                            <Gerrit-ApiType>${Gerrit-ApiType}</Gerrit-ApiType>
                            <Gerrit-ApiVersion>${Gerrit-ApiVersion}</Gerrit-ApiVersion>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <release>11</release>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
            </plugin>

        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.google.gerrit</groupId>
            <artifactId>gerrit-${Gerrit-ApiType}-api</artifactId>
            <version>${Gerrit-ApiVersion}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.30</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.24</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.11</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>4.5.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.github.tomakehurst</groupId>
            <artifactId>wiremock-standalone</artifactId>
            <version>2.27.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

</project>
